# This file is a shell script that supplies the information necessary
# to tailor a template configure script into the configure script
# appropriate for this directory.  For more information, check any
# existing configure script.

srctrigger=mmalloc.c
srcname="mmalloc library"
configdirs=""

# per-host:

case "${host_os}" in

sysv4)
	host_makefile_frag=config/mh-sysv4
	;;

sunos4*)
	host_makefile_frag=config/mh-sunos4
	;;

*)
	;;

esac

# per-target:

#
# Local Variables:
# fill-column: 131
# End:
#
