# This file is a shell script that supplies the information necessary
# to tailor a template configure script into the configure script
# appropriate for this directory.  For more information, check any
# existing configure script.

srctrigger=z8k-dis.c
srcname="opcodes"

# per-host:

case "${host}" in
  a29k-nyu-sym1)          my_host=ultra3 ;;
  hppa*-hp-bsd)           my_host=hppabsd ;;
  hppa*-hp-hpux)          my_host=hppahpux ;;
  i860-stratus-sysv4)     my_host=stratus ;;
  i[34]86-*-go32)         my_host=go32 ;;
  i[34]86-*-linux)        my_host=i386linux ;;
  i[34]86-*-mach)         my_host=i386mach ;;
  i[34]86-*-msdos*)       my_host=dose ;;
  i[34]86-*-sysv*)        my_host=i386v ;;
  i[34]86-*-sco)          my_host=i386v ;;
  i[34]86-*-sysv4*)       my_host=i386v4 ;;
  i[34]86-ncr-sysv4*)     my_host=ncr3000 ;;
  m68k-apollo-bsd*)       my_host=apollo68 ;;
  m68k-apollo-sysv*)      my_host=apollov68 ;;
  m68k-cbm-amigados)      my_host=amigados ;;
  m68k-cbm-sysv4*)        my_host=amix ;;
  m68k-hp-bsd)            my_host=hp300bsd ;;
  m68k-hp-hpux)           my_host=hp300 ;;        # renamed from hp9000
  m68k-sony-*)            my_host=news ;;
  m68k-sun-sunos*)        my_host=sun3 ;;
  m88k-dg-dgux)           my_host=dgux ;;
  m88k-harris-*)          my_host=harris ;;
  m88k-motorola-*)        my_host=delta88 ;;
  mips-dec-ultrix)        my_host=decstation ;;
  mips-sgi-irix | mips-sgi-irix3) my_host=irix3 ;;
  mips-sgi-irix4)         my_host=irix4 ;;
  romp-ibm-bsd*)          my_host=rtbsd ;;
  rs6000-ibm-aix)         my_host=rs6000 ;;
  sparc-*-sysv4)          my_host=sysv4 ;;
  sparc-*-sysv64)         my_host=sysv4-ll ;;
  sparc-sun-solaris2)     my_host=solaris2 ;;
  sparc-sun-sunos*)       my_host=sparc ;;
  sparc-sun-sunos64)      my_host=sparc-ll ;;
  tahoe-*-*)              my_host=tahoe ;;
  vax-dec-bsd*)           my_host=vaxbsd ;;
  vax-dec-ultrix*)        my_host=vaxult ;;
  we32k-*-*)              my_host=we32k ;;
esac


# Set up to make a link between the host's include file and "sysdep.h".
files="../bfd/hosts/${my_host}.h"

links="sysdep.h"

if [ ! -f ${srcdir}/${files} ] ; then
	if [ -n "${my_host}" ] ; then
		echo '***' No file ${srcdir}/${files} 1>&2
	fi
	echo '***' ${srcname} does not support host ${host} 1>&2
	exit 1
fi

host_makefile_frag=
if [ -f ${srcdir}/../bfd/config/${my_host}.mh ] ; then
	host_makefile_frag=../bfd/config/${my_host}.mh
fi

# per-target:
