# This file is a shell script fragment that supplies the information
# necessary to tailor a template configure script into the configure
# script appropriate for this directory.  For more information, check
# any existing configure script.

configdirs=
srctrigger=readline.c
srcname="the readline library"

# per-host:

files=sysdep-norm.h
links=sysdep.h

case "${host_os}" in
solaris*|sysv4*)
	host_makefile_frag=config/mh-sysv4
	case "${host_vendor}" in
	ncr*)
		host_makefile_frag=config/mh-ncr3000
		;;
	esac
	;;

scosysv*)
	host_makefile_frag=config/mh-sco
	files=sysdep-sco.h
	;;

m88kbcs | sysv*)
	host_makefile_frag=config/mh-sysv
	case "${host_vendor}" in
	apollo)
		host_makefile_frag=config/mh-apollo68v ;;
	esac
	;;

linux)
	host_makefile_frag=config/mh-posix
	;;
aix*)
	host_makefile_frag=config/mh-sysv
	case "${host_cpu}" in
	rs6000)	files=sysdep-aix.h
	esac
	;;

irix*)
	host_makefile_frag=config/mh-sysv
	files=sysdep-irix.h
	;;

newsos* | mach*)
	files=sysdep-obsd.h
	;;
esac

# per-target:


