# This file is a shell script that supplies the information necessary
# to tailor a template configure script into the configure script
# appropriate for this directory.  For more information, check any
# existing configure script.

configdirs="h8300 z8k h8500 sh"
srctrigger=Makefile.in
srcname="sim"
target_dependent=true

# per-host:


# per-target:

# WHEN ADDING ENTRIES TO THIS MATRIX:
#  Make sure that the left side always has two dashes.  Otherwise you
#  can get spurious matches.  Even for unambiguous cases, do this as a
#  convention, else the table becomes a real mess to understand and maintain.

case "${target}" in
  h8300*-*-*)		sim_target=h8300 ;;
  h8500-*-*)		sim_target=h8500 ;;
  z8k*-*-*)		sim_target=z8k ;;
  sh*-*-*)		sim_target=sh ;;
  *)			sim_target=none ;;
esac

configdirs=${sim_target}

if [ ! -f ${srcdir}/${sim_target}/${sim_target}.mt ] ; then
target_makefile_frag=
else
target_makefile_frag=${sim_target}/${sim_target}.mt
fi
# post-target:

